fixed spacing and final colors

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ h5 {
 
 ul {
   list-style-type: square;
-  border: 1px solid #8bc34a;
+  border: 1px solid #00ff00;
   width: 45%;
   margin: auto;
   padding-top: 10px;
@@ -90,7 +90,7 @@ ul {
   max-width: 80%;
   text-align: center;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 150px;
 }
 
 .startpage {
@@ -185,7 +185,7 @@ tr:nth-child(even) {
 .bubble:hover .bubbletext {
   visibility: visible;
   opacity: 1;
-  border: 1px solid #8bc34a;
+  border: 1px solid #00ff00;
 }
 
 .menu {
